# diabetes

./: pyproject.toml
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md
docs/deployment/: deploymentdoc.md  main.py  model.joblib  requirements.txt
docs/modeling/: baseline_models.md
scripts/data_acquisition/: data_acquisition.ipynb
scripts/eda/: eda.ipynb
scripts/evaluation/: evaluation.ipynb
scripts/preprocessing/: preprocessing.ipynb
scripts/training/: training.ipynb
