[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nombre_paquete"
version = "0.1.0"
authors = [{name = "ayvelasquezma", email = "ayvelasquezma@unal.edu.co"}]
description = "Proyecto sobre la deteccion de diabetes"
requires-python = ">3.8"
dependencies = [
    "numpy"
]

[tool.setuptools.packages.find]
where = ["src/"]
